Building the top menu

--- a/sass/abstrats/_variables.scss
+++ b/sass/abstrats/_variables.scss
@@ -15,6 +15,7 @@ $neutral-dark-3: hsl(232, 10%, 55%);
 
 $grayish: hsl(210, 4%, 67%);
 $white: hsl(0, 0%, 100%);
+$black: #222;
 
 //Font
 $display: "Fraunces";
