--- a/css/style.css
+++ b/css/style.css
@@ -11,5 +11,43 @@ html {
 body {
   font-size: 1.8rem; }
 
+ul {
+  list-style: none; }
+
+a {
+  text-decoration: none; }
+
 body {
   font-family: "Fraunces"; }
+
+.header__menu {
+  display: flex;
+  font-family: "Barlow"; }
+
+.header .logo {
+  font-weight: 900;
+  color: white; }
+
+.menu__nav {
+  display: flex;
+  gap: 5rem;
+  margin-left: auto; }
+
+.menu__link {
+  color: white; }
+  .menu__link--contact {
+    background-color: white;
+    padding: 1.5rem 3rem;
+    font-family: "Fraunces";
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    border-radius: 100px;
+    color: #222; }
+
+.header {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("/images/desktop/image-header.jpg");
+  height: calc(100vh - 6rem);
+  padding: 4.3rem 4rem; }
