--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,9 @@
 @import "sass/abstrats/variables";
+@import "sass/abstrats/mixins";
 
 @import "sass/base/base";
 @import "sass/base/typography";
 
-// @import "/sass/components/";
+@import "sass/components/header";
 
 @import "sass/pages/home";
