feat: Building the header

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,10 @@
 body {
   font-family: $display;
 }
+
+.heading-1 {
+  color: $white;
+  font-size: 5rem;
+  letter-spacing: 8px;
+  text-transform: uppercase;
+}
