--- a/css/style.css
+++ b/css/style.css
@@ -11,5 +11,60 @@ html {
 body {
   font-size: 1.8rem; }
 
+ul {
+  list-style: none; }
+
+a {
+  text-decoration: none; }
+
 body {
   font-family: "Fraunces"; }
+
+.heading-1 {
+  color: white;
+  font-size: 5rem;
+  letter-spacing: 8px;
+  text-transform: uppercase; }
+
+.header__menu {
+  display: flex;
+  font-family: "Barlow"; }
+
+.header__inner {
+  display: flex;
+  gap: 7rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 8rem; }
+  .header__inner img {
+    max-height: 10rem; }
+
+.header .logo {
+  font-weight: 900;
+  font-size: 3rem;
+  color: white; }
+
+.menu__nav {
+  display: flex;
+  gap: 4rem;
+  margin-left: auto; }
+
+.menu__link {
+  color: white; }
+  .menu__link--contact {
+    background-color: white;
+    padding: 1.5rem 2.5rem;
+    font-family: "Fraunces";
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    border-radius: 100px;
+    color: #222; }
+
+.header {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("/images/desktop/image-header.jpg");
+  height: calc(100vh - 8.6rem);
+  padding: 4.3rem 4rem; }
