feat: Adding the heading 1 on header

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,6 @@
 .header {
-  @include bg-base;
+  @include backgroud;
   background-image: url("/images/desktop/image-header.jpg");
-  height: calc(100vh - 6rem);
+  height: calc(100vh - 8.6rem);
   padding: 4.3rem 4rem;
 }
