--- a/css/style.css
+++ b/css/style.css
@@ -20,24 +20,41 @@ a {
 body {
   font-family: "Fraunces"; }
 
+.heading-1 {
+  color: white;
+  font-size: 5rem;
+  letter-spacing: 8px;
+  text-transform: uppercase; }
+
 .header__menu {
   display: flex;
   font-family: "Barlow"; }
 
+.header__inner {
+  display: flex;
+  gap: 7rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 8rem; }
+  .header__inner img {
+    max-height: 10rem; }
+
 .header .logo {
   font-weight: 900;
+  font-size: 3rem;
   color: white; }
 
 .menu__nav {
   display: flex;
-  gap: 5rem;
+  gap: 4rem;
   margin-left: auto; }
 
 .menu__link {
   color: white; }
   .menu__link--contact {
     background-color: white;
-    padding: 1.5rem 3rem;
+    padding: 1.5rem 2.5rem;
     font-family: "Fraunces";
     font-size: 1.4rem;
     text-transform: uppercase;
@@ -49,5 +66,5 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("/images/desktop/image-header.jpg");
-  height: calc(100vh - 6rem);
+  height: calc(100vh - 8.6rem);
   padding: 4.3rem 4rem; }
