--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,8 +4,22 @@
     font-family: $title;
   }
 
+  &__inner {
+    display: flex;
+    gap: 7rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 8rem;
+
+    img {
+      max-height: 10rem;
+    }
+  }
+
   .logo {
     font-weight: 900;
+    font-size: 3rem;
     color: $white;
   }
 }
@@ -13,7 +27,7 @@
 .menu {
   &__nav {
     display: flex;
-    gap: 5rem;
+    gap: 4rem;
     margin-left: auto;
   }
 
@@ -24,7 +38,7 @@
 
     &--contact {
       background-color: $white;
-      padding: 1.5rem 3rem;
+      padding: 1.5rem 2.5rem;
       font-family: $display;
       font-size: 1.4rem;
       text-transform: uppercase;
