--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -13,7 +13,7 @@
     margin-top: 8rem;
 
     img {
-      max-height: 10rem;
+      max-height: 8rem;
     }
   }
 
@@ -35,6 +35,11 @@
   }
   &__link {
     color: $white;
+    transition: all 0.2s;
+
+    &:hover {
+      color: lighten($primary-yellow, 15%);
+    }
 
     &--contact {
       background-color: $white;
@@ -44,6 +49,12 @@
       text-transform: uppercase;
       border-radius: 100px;
       color: $black;
+      transition: all 0.2s;
+
+      &:hover {
+        background-color: #6fcfff;
+        color: $white;
+      }
     }
   }
 }
