--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,5 +5,10 @@
 @import "sass/base/typography";
 
 @import "sass/components/header";
+@import "sass/components/the-content";
+
+@import "sass/layout/cols";
 
 @import "sass/pages/home";
+
+@import "sass/sections/section-about";
