--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,6 @@
 .header {
   @include backgroud;
   background-image: url("/images/desktop/image-header.jpg");
-  height: calc(100vh - 8.6rem);
+  height: calc(100vh);
   padding: 4.3rem 4rem;
 }
