--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,4 +12,5 @@
 @import "sass/pages/home";
 
 @import "sass/sections/section-about";
+@import "sass/sections/section-projects";
 @import "sass/sections/section-services";
