--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,9 @@ body {
   letter-spacing: 8px;
   text-transform: uppercase; }
 
+.heading-2 {
+  font-weight: 900; }
+
 .header__menu {
   display: flex;
   font-family: "Barlow"; }
@@ -127,6 +130,37 @@ body {
   max-width: 1440px; }
   .section-about__image {
     max-width: 100%; }
+
+.section-projects {
+  display: flex;
+  height: 60rem; }
+  .section-projects--project-1, .section-projects--project-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
+    max-width: 72rem;
+    width: 100%;
+    padding: 5rem; }
+    .section-projects--project-1 h2, .section-projects--project-2 h2 {
+      margin-bottom: 3rem; }
+    .section-projects--project-1 p, .section-projects--project-2 p {
+      font-family: "Barlow";
+      text-align: center;
+      line-height: 3rem;
+      width: 38rem; }
+  .section-projects--project-1 {
+    background-image: url("../images/desktop/image-graphic-design.jpg"); }
+    .section-projects--project-1 h2 {
+      color: #25564b; }
+    .section-projects--project-1 p {
+      color: #458c7e; }
+  .section-projects--project-2 {
+    background-image: url("../images/desktop/image-photography.jpg"); }
+    .section-projects--project-2 h2 {
+      color: #19536b; }
+    .section-projects--project-2 p {
+      color: #1d5f7c; }
 
 .section-services {
   display: flex;
