feat: Building the Section Client

--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,49 @@ body {
   .section-about__image {
     max-width: 100%; }
 
+.section-client {
+  display: flex;
+  gap: 8rem;
+  flex-direction: column;
+  padding: 15rem 0; }
+  .section-client h2 {
+    align-self: center;
+    font-size: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 8px;
+    color: #a7abae; }
+  .section-client__clients {
+    display: flex;
+    gap: 3rem;
+    justify-content: center; }
+  .section-client__client {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 35rem;
+    width: 100%; }
+    .section-client__client p {
+      font-family: "Barlow";
+      text-align: center;
+      line-height: 3rem;
+      color: #5a636c; }
+  .section-client__photo {
+    max-width: 8rem;
+    width: 100%;
+    border-radius: 100%;
+    margin-bottom: 6rem; }
+  .section-client__description {
+    text-align: center;
+    margin-top: 8rem; }
+    .section-client__description h3 {
+      font-weight: 900;
+      color: #23303e;
+      margin-bottom: 0.8rem; }
+    .section-client__description .client-status {
+      font-family: "Barlow";
+      font-size: 1.5rem;
+      color: #a7abae; }
+
 .section-projects {
   display: flex;
   height: 60rem; }
