--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,5 +12,6 @@
 @import "sass/pages/home";
 
 @import "sass/sections/section-about";
+@import "sass/sections/section-client";
 @import "sass/sections/section-projects";
 @import "sass/sections/section-services";
