feat: Building the Section Gallery

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,5 @@
 .header {
-  @include backgroud;
+  @include background;
   background-image: url("/images/desktop/image-header.jpg");
   height: calc(100vh);
   padding: 4.3rem 4rem;
