--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,33 @@ body {
       font-size: 1.5rem;
       color: #a7abae; }
 
+.section-gallery {
+  display: flex; }
+  .section-gallery .gallery {
+    max-width: 36rem;
+    width: 100%;
+    height: 44rem; }
+    .section-gallery .gallery--1 {
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-image: url("../images/desktop/image-gallery-milkbottles.jpg"); }
+    .section-gallery .gallery--2 {
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-image: url("../images/desktop/image-gallery-orange.jpg"); }
+    .section-gallery .gallery--3 {
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-image: url("../images/desktop/image-gallery-cone.jpg"); }
+    .section-gallery .gallery--4 {
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-image: url("../images/desktop/image-gallery-sugarcubes.jpg"); }
+
 .section-projects {
   display: flex;
   height: 60rem; }
