--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,5 +13,6 @@
 
 @import "sass/sections/section-about";
 @import "sass/sections/section-client";
+@import "sass/sections/section-gallery";
 @import "sass/sections/section-projects";
 @import "sass/sections/section-services";
