--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 
 @import "sass/components/header";
 @import "sass/components/the-content";
+@import "sass/components/footer";
 
 @import "sass/layout/cols";
 
